@startuml
'https://plantuml.com/class-diagram

skinparam packageStyle rectangle
skinparam linetype splines
skinparam nodesep 120
skinparam ranksep 150
skinparam shadowing false
skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor Black
}

package "Qv2Core" {
    abstract class Qv2Component {
        # mName: string
        # mListener: Listener*
        # mState: atomic<State>
        + getName(): string
        + getState(): State
        + setState(state: State): void
        + setListener(listener: Listener*): void
        + enableRecon(enable: bool): void
        + {abstract} getVersion(): string
        + {abstract} configure(params: vector<Qv2Param*>): Qv2Status
        + {abstract} query(params: vector<Qv2Param*>): Qv2Status
        + {abstract} queue(items: vector<unique_ptr<Qv2Work>>): Qv2Status
        + {abstract} start(): Qv2Status
        + {abstract} stop(): Qv2Status
        + {abstract} flush(): Qv2Status
        + release(): void
        # {abstract} onStateChanged(state: State): void
        # {abstract} onRelease(): void
    }
}

package "Codec Implementations" {
    
    package "APV Branch" {
        class Qv2ApvEncoder {
            + getVersion(): string
            + configure(params): Qv2Status
            + query(params): Qv2Status
            + queue(items): Qv2Status
            + start(): Qv2Status
            + stop(): Qv2Status
            + flush(): Qv2Status
            # onStateChanged(state): void
            # onRelease(): void
            - mapBlockToImgb(block, imgb, depth): void
        }

        class Qv2ApvDecoder {
            + getVersion(): string
            + configure(params): Qv2Status
            + query(params): Qv2Status
            + queue(items): Qv2Status
            + start(): Qv2Status
            + stop(): Qv2Status
            + flush(): Qv2Status
            # onStateChanged(state): void
            # onRelease(): void
        }
    }

    package "HEVC Branch" {
        class Qv2HevcEncoder {
            + getVersion(): string
            + configure(params): Qv2Status
            + query(params): Qv2Status
            + queue(items): Qv2Status
            + start(): Qv2Status
            + stop(): Qv2Status
            + flush(): Qv2Status
            # onStateChanged(state): void
            # onRelease(): void
        }

        class Qv2HevcDecoder {
            + getVersion(): string
            + configure(params): Qv2Status
            + query(params): Qv2Status
            + queue(items): Qv2Status
            + start(): Qv2Status
            + stop(): Qv2Status
            + flush(): Qv2Status
            # onStateChanged(state): void
            # onRelease(): void
        }
    }
}

Qv2Component <|-- Qv2ApvEncoder
Qv2Component <|-- Qv2ApvDecoder
Qv2Component <|-- Qv2HevcEncoder
Qv2Component <|-- Qv2HevcDecoder

@enduml
